[metadata]
name = Advent of Code
description = My Advent of Code solutions.
author = Lennart Breede
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3.11

[options]
packages =
    adventofcode
install_requires =

python_requires = >=3.11
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.980
    flake8>=3.9
    tox>=3.24

[options.package_data]
adventofcode = py.typed